Adopt Rake Toolchain
Switch to using Rake for all build tasks except Dia (closes #132).
Delete all previous toolchain related scripts (Bash and batch).
Update documentation accordingly.

--- a/extras/manual/StdLibMan.html
+++ b/extras/manual/StdLibMan.html
@@ -2373,12 +2373,12 @@ darkness.<br></p>
 <div class="content">
 <div class="paragraph">
 <p>&gt; <em>x sky</em><br>
-A clear and sunny noon sky. <br>
-It&#8217;s getting late. The sun sets rapidly, night has fallen.<br></p>
+A clear and sunny noon sky.<br></p>
 </div>
 <div class="paragraph">
-<p>&gt; z<br>
-Time passes&#8230;&#8203;<br></p>
+<p>&gt; <em>z</em><br>
+Time passes&#8230;&#8203; <br>
+It&#8217;s getting late. The sun sets rapidly, night has fallen.<br></p>
 </div>
 <div class="paragraph">
 <p>&gt; <em>x sky</em><br>
@@ -3125,7 +3125,7 @@ You take a nap. When you wake up its nighttime.<br></p>
 <p>It is now pitch black.<br></p>
 </div>
 <div class="paragraph">
-<p>&gt; <span class="comment">; During the night all DARK&lowbar;LOCATION features are active:</span><br>
+<p>&gt; <span class="comment">; During the night all DARK_LOCATION features are active:</span><br>
 &gt; <em>look</em><br>
 The Forest of Doom<br>
 It is pitch black. You can&#8217;t see anything at all.<br></p>
@@ -4521,7 +4521,7 @@ As a last resort, you can always use the character&#8217;s name as the disambigu
 <div class="exampleblock gametranscript">
 <div class="content">
 <div class="paragraph">
-<p>&gt; i<br>
+<p>&gt; <em>i</em><br>
 You are empty-handed. You are wearing your tuxedo.<br></p>
 </div>
 <div class="paragraph">
