--- a/extras/tutorials/Clothing_Guide.html
+++ b/extras/tutorials/Clothing_Guide.html
@@ -1256,7 +1256,7 @@ Quickly, take a shower, wear that uniform an leave the flat&#8230;&#8203;<br></p
 The exit is west. There is a shower stall and a uniform here.<br></p>
 </div>
 <div class="paragraph">
-<p>&gt; <em><em>﻿examine uniform</em></em><br>
+<p>&gt; <em>examine uniform</em><br>
 It&#8217;s your waiter uniform, spotless as usual.<br></p>
 </div>
 <div class="paragraph">
@@ -1393,7 +1393,7 @@ Quickly, take a shower, wear that uniform an leave the flat&#8230;&#8203;<br></p
 The exit is west. There is a shower stall and a uniform here.<br></p>
 </div>
 <div class="paragraph">
-<p>&gt; <em><em>﻿west</em></em><br>
+<p>&gt; <em>west</em><br>
 You can&#8217;t leave the house naked!<br></p>
 </div>
 <div class="paragraph">
