Tweak Lib Messages IDs
Slightly rename a few message attributes that still referred to
the old `worn` ENTITY:

* check_obj_in_worn       ->  check_obj_worn_by_hero
* check_obj_not_in_worn1  ->  check_obj_not_worn_by_hero1
* check_obj_not_in_worn2  ->  check_obj_not_worn_by_hero2
* check_obj_not_in_worn3  ->  check_obj_not_worn_by_hero3

The old attributes names were misleading wit the new clothing
system. Also, the new system also accounts for items worn by
NPCs, so the new `worn_by_hero` pattern is more appropriate,
in case future editions of the library will introduce similar
messages for NPCs.

Also rename occurrences of these attributes in the Manual and
in the `mygame_import.i` template file.

--- a/extras/manual/StdLibMan.html
+++ b/extras/manual/StdLibMan.html
@@ -9338,7 +9338,7 @@ This applies to the verbs <code>empty_in</code> and <code>pour_in</code>:</p>
 </div>
 <div class="listingblock lib">
 <div class="content">
-<pre class="rouge highlight" lang="alan"><code class="language-alan" data-lang="alan"><span class="kr">HAS</span><span class="w"> </span><span class="n">check_obj_in_worn</span><span class="w"> </span><span class="dl">"</span><span class="s2">You are not wearing </span><span class="si">$+1</span><span class="s2">.</span><span class="dl">"</span><span class="p">.</span></code></pre>
+<pre class="rouge highlight" lang="alan"><code class="language-alan" data-lang="alan"><span class="kr">HAS</span><span class="w"> </span><span class="n">check_obj_worn_by_hero</span><span class="w"> </span><span class="dl">"</span><span class="s2">You are not wearing </span><span class="si">$+1</span><span class="s2">.</span><span class="dl">"</span><span class="p">.</span></code></pre>
 </div>
 </div>
 <div class="paragraph">
@@ -9346,7 +9346,7 @@ This applies to the verbs <code>empty_in</code> and <code>pour_in</code>:</p>
 </div>
 <div class="listingblock lib">
 <div class="content">
-<pre class="rouge highlight" lang="alan"><code class="language-alan" data-lang="alan"><span class="kr">HAS</span><span class="w"> </span><span class="n">check_obj_not_in_worn1</span><span class="w"> </span><span class="dl">"</span><span class="s2">You are already wearing </span><span class="si">$+1</span><span class="s2">.</span><span class="dl">"</span><span class="p">.</span></code></pre>
+<pre class="rouge highlight" lang="alan"><code class="language-alan" data-lang="alan"><span class="kr">HAS</span><span class="w"> </span><span class="n">check_obj_not_worn_by_hero1</span><span class="w"> </span><span class="dl">"</span><span class="s2">You are already wearing </span><span class="si">$+1</span><span class="s2">.</span><span class="dl">"</span><span class="p">.</span></code></pre>
 </div>
 </div>
 <div class="paragraph">
@@ -9354,8 +9354,8 @@ This applies to the verbs <code>empty_in</code> and <code>pour_in</code>:</p>
 </div>
 <div class="listingblock lib">
 <div class="content">
-<pre class="rouge highlight" lang="alan"><code class="language-alan" data-lang="alan"><span class="kr">HAS</span><span class="w"> </span><span class="n">check_obj_not_in_worn2</span><span class="w"> </span><span class="dl">"</span><span class="s2">It doesn't make sense to </span><span class="si">$v</span><span class="s2"> something you're
-                            wearing.</span><span class="dl">"</span><span class="p">.</span></code></pre>
+<pre class="rouge highlight" lang="alan"><code class="language-alan" data-lang="alan"><span class="kr">HAS</span><span class="w"> </span><span class="n">check_obj_not_worn_by_hero2</span><span class="w"> </span><span class="dl">"</span><span class="s2">It doesn't make sense to </span><span class="si">$v</span><span class="s2">
+                                 something you're wearing.</span><span class="dl">"</span><span class="p">.</span></code></pre>
 </div>
 </div>
 <div class="paragraph">
@@ -9364,7 +9364,7 @@ It will have to be removed first (<code>drop</code>):</p>
 </div>
 <div class="listingblock lib">
 <div class="content">
-<pre class="rouge highlight" lang="alan"><code class="language-alan" data-lang="alan"><span class="kr">HAS</span><span class="w"> </span><span class="n">check_obj_not_in_worn3</span><span class="p">:</span><span class="w"> </span><span class="dl">"</span><span class="s2">You'll have to take off </span><span class="si">$+1</span><span class="s2"> first.</span><span class="dl">"</span></code></pre>
+<pre class="rouge highlight" lang="alan"><code class="language-alan" data-lang="alan"><span class="kr">HAS</span><span class="w"> </span><span class="n">check_obj_not_worn_by_hero3</span><span class="p">:</span><span class="w"> </span><span class="dl">"</span><span class="s2">You'll have to take off </span><span class="si">$+1</span><span class="s2"> first.</span><span class="dl">"</span></code></pre>
 </div>
 </div>
 </div>
